restyle.php: Prevent out of place line breaks. [skip ci]
The line break inside "pcap-filter" at the beginning of tcpdump(1) was
plain wrong, this change prevents it and many other cases.

--- a/style.css
+++ b/style.css
@@ -346,3 +346,7 @@ div.manpage .post .entry dt {
 div.manpage table table td {
 	border: 1px solid black;
 }
+
+div.manpage span.manref {
+	white-space: nowrap;
+}
